# GIF-7104-H2017-ParallelProgramming

./: .gitignore  README.md
tp1/: _Fist_result
tp1/Rapport/: Test_data.xlsx  rapport.tex  raw_data.txt
tp1/Report/: Test_data.xlsx  report.tex
tp1/SourceFiles/: CMakeLists.txt  ChronoTest.cpp  SourceFiles  batch_experimentation.sh  premiers.cpp  results
tp2/Report/: report.tex
tp2/SourceFiles/: tp2.cpp  tp2_openmp.cpp
tp3/: CMakeLists.txt  main.cpp
tp4/: ImageFilter.cl  makefile  tp4_opencl.cpp
tp4/Rapport/: report.tex
tp4/SourceCode/: CMakeLists.txt  filter.cl  lodepng.cpp  makefile  makefile_serial  tp4.cpp  tp4_openCL.cpp
tp4/SourceCode/Headers/: tp4_openCL.h
tp5/: CMakeLists.txt  README.md  experimentations.sh  maskFile  tp5.cpp
tp5/SourceCode/: CMakeLists.txt  arrayFireTestWokingInstallation.cpp  config_matrix  thermal_sim.cpp
tp5/configs/: configFile
tp5/results/: experimentationsResults.ods  resultsLogFile
tp5/src/: thermalSimulation.cpp  tp5.cpp  tp5_sandbox.cpp  tp5_sandbox2.cpp
tp5/src/headers/: Chrono.hpp  thermalSimulation.hpp
